Finish website, Fix image going out of container

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 body {
     height:100vh;
     margin:0;
-    overflow: hidden;
     font-family: Roboto, sans-serif;
     background-color: rgb(129, 67, 67);
 }
@@ -20,7 +19,7 @@ ul {
 
 a {
     text-decoration: none;
-    color:rgb(179, 175, 175)
+    color:rgb(255, 255, 255)
 }
 
 button {
@@ -46,8 +45,9 @@ html {
 .header {
     display: flex;
     padding: 1rem 1.5rem;
-    box-shadow: 2px 3px 2px #9e9999;
+    /* box-shadow: 2px 3px 2px #9e9999; */
     background-color: rgb(129, 67, 67);
+    
     justify-content: space-between;
     align-items: center;
     position: sticky;
@@ -61,7 +61,7 @@ html {
 }
 
 .nav-link {
-    font-weight: bold   
+    font-weight: light   
 }
 
 .hamburger {
@@ -69,7 +69,7 @@ html {
 }
 
 .headertext {
-    color: #F9FAF8;
+    color: #ffffff;
     font-weight: bold;
 }
 
@@ -79,7 +79,7 @@ html {
     align-items: center;
     justify-content: center;
     padding:15px;
-    background-color: rgb(99, 50, 50);
+    background-color: rgb(129, 67, 67);
 }
 
 .copyright {
@@ -95,9 +95,9 @@ html {
     align-items: center;
     justify-content: space-between;
     gap: 1.9rem;
-    max-width: 1100px;
+    max-width: 900px;
     background-color: rgb(129, 67, 67);
-    margin: 2rem auto -6rem;
+    margin: 2rem auto 1rem;
 }
 
 .btn {
@@ -107,14 +107,15 @@ html {
     width: 100px;
     border: none;
     font-size: 1.4rem;
-    border-radius: 5px;
+    border-radius: 15px;
     color: #fff;
-    background-color: black;
+    background-color: rgb(235, 13, 13);
     margin-bottom: 1rem;
 }
 
 .thumbnail {
-    max-width: 20rem;
+    width:200px;
+    height:200px 
 }
 
 .thetexts {
@@ -139,24 +140,24 @@ html {
 }
 
 .section2 {
+    font: white;
     display: flex;
-    height:200px;
     margin-top: 1rem;
     flex-direction: column;
-    background-color: aqua;
+    background-color: rgb(192, 76, 76);
     text-align: center;
 }
 
 .images {
     padding: 40px;
-    background-color: red;
+    margin-bottom: 1rem;
+    background-color: rgb(192, 76, 76);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .bingo {
-    border: 3px solid cyan;
     border-radius: 25px;
     max-width: 30%;
     max-height: 30%;
@@ -176,11 +177,13 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: purple;
-    height:19vh
+    height:200px;
+    background-color: rgb(172, 68, 68);
+    margin: auto auto auto 1rem ;
 }
 
 .quote {
+    color:white;
     font-size: 30px;
     display: flex;
     gap:8px;
@@ -197,41 +200,52 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: yellow;
-    height:19vh
+    background-color: rgb(192, 76, 76);
+    height:200px;
 }
 
 .darkblueybutton {
+    background-color: transparent;
     font: white;
-    border: 5px solid white;
+    border: 3px solid white;
     border-radius: 20px;
 }
 
+.subactiontext {
+    font-weight: 1px;
+    font-size: 13px;
+}
+
 .signupzone {
-    background:#f63848;
+    background:#eb4351d2;
+    align-items: center;
     justify-content: space-between;
     display: flex;
     padding:25px;
     border-radius: 5px;
-    min-width: 600px;
+    height:100px;
+    width:600px;
+    max-width: 600px;
 }
 
 .actiontext {
     color:white;
     display: flex;
-    gap:8px;
+    font-weight: lighter;
+    gap:3px;
     flex-direction: column;
 }
 
 .infotext {
+    margin-top: 1rem;
     font-size: 30px;
     font-weight: 900;
-    color: #1F2937
+    color: #ffffff
 }
 
 .text {
     font-size: 20px;
-    color: #1F2937;
+    color: #cecece;
     font-weight: lighter;
     font-style: italic;
 }
